/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-09-13 05:55 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/debug/dbgtobj.prg
    ! pacify warnings on unused variables

2012-09-12 14:15 UTC-0300 Luiz Rafael Culik <luiz/at/xharbour.com>
  * source/tip/mail.prg
  * source/tip/sendmail.prg
    ! added new mime types for openoffice files and 7zip
    
2012-09-12 11:10 UTC-0300 Luiz Rafael Culik <luiz/at/xharbour.com>
  * source/debug/dbgbrwsr.prg
  * source/debug/dbghelp.prg
  * source/debug/dbgmenu.prg
  * source/debug/dbgtarr.prg
  * source/debug/dbgthsh.prg
  * source/debug/dbgtobj.prg
  * source/debug/dbgwa.prg
  * source/debug/debugger.prg
  * source/debug/tbrwtext.prg
    ! updated to allow debug big sources with very large number of lines

2012-09-11 10:30 UTC-0300 Luiz Rafael Culik <luiz/at/xharbour.com>
  * source/tip/mail.prg
  * source/tip/sendmail.prg
    ! added new mime types for msoffice 2007 extension

2012-09-04 20:45 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/debug/tbrwtext.prg
    ! method Skip was updated (borrowed from Harbour)

2012-09-04 10:20 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/hbsocket.c
    ! use xHarbour function: hb_arraySetCLPtr -> hb_arraySetCPtr

2012-09-04 09:35 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/hbsqlit3/sqlite3ext.h
  * contrib/hbsqlit3/sqlite3.h
  * contrib/hbsqlit3/sqlite3.c
  * contrib/hbsqlit3/config.h
    ! updated to version 3.7.14

2012-09-02 21:41 UTC-0300 Luiz Rafael Culik <luiz/at/xharbour.com>
  * source/vm/thread.c
    ! Protected one function for compilation under windows

2012-09-02 21:20 UTC-0300 Luiz Rafael Culik <luiz/at/xharbour.com>
  * source/winos.prg
    ! added stub for OS_ISWIN8 when compiling under *nix
    
2012-09-02 21:10 UTC-0300 Luiz Rafael Culik <luiz/at/xharbour.com>