@@ -8,6 +8,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2012-09-14 07:22 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * contrib/hbzlib/zip.c
+    ! fixed not-working HB_UNZIPFILE (reported in MiniGui Forum)
+
 2012-09-13 05:55 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * source/debug/dbgtobj.prg
     ! pacify warnings on unused variables
